# vue-modorn-commercial-web-nchuit

./: .gitignore  README.md  ai_commerce.sql  pyproject.toml  requirements.txt  ruff.toml
backend/: app.js  app.py  config.py  package-lock.json  package.json
backend/models/: database.py  product.py  user.py
backend/routes/: auth.py  chatbot.py  news.py  orders.py  product.py  user.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Chatbot.vue  Footer.vue  NavBar.vue  SearchResults.vue
frontend/src/router/: index.ts
frontend/src/stores/: authStore.ts  cartStore.ts  counter.ts  newsStore.ts  orderStore.ts  productStore.ts
frontend/src/views/: About.vue  CartView.vue  CheckoutView.vue  Contact.vue  HomeView.vue  LoginView.vue  NewsDetail.vue  OrderDetail.vue  OrderHistory.vue  PrivacyPolicy.vue  ProductDetail.vue  RegisterView.vue  ShopView.vue  UserProfile.vue
src/: app.py  config.py
src/models/: database.py  product.py  user.py
src/routes/: auth.py  chatbot.py  news.py  orders.py  product.py  user.py
